service FetcherService {
  
  rpc RetrieveActivities (RetrieveActivitiesRequest) returns (RetrieveActivitiesResult) {}
}

message RetrieveActivitiesRequest {
  string mention_name = 1;
  int64 after_id = 2;
  string type = 4;
  int64 limit = 5;
}


message RetrieveActivitiesResult {
  repeated Activity result = 1;
}

message Activity {
  int64 id = 1;

  string pk = 2;
  string media_id = 3;
  string media_url = 4;

  int64 user_id = 5;
  string user_name = 6;
  string user_image_url = 7;
  string mentioned_username = 8;
  
  string type = 9;
  string comment = 10;

  int64 created_at = 11; 
}
